--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Entrega Taller 1</title>
+  <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 40px;
       background-color: #f9f9f9;
     }
+
     header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    header h1, header h2, header h3, header h4 {
-      margin: 5px;
-    }
-    .info {
-      text-align: center;
+      text-align: left;
       margin-bottom: 20px;
-      font-size: 1rem;
     }
-    .code-block {
-      background-color: #1e1e1e;
-      color: #dcdcdc;
-      padding: 20px;
+
+    header h1, header h2 {
+      margin: 5px 0;
+    }
+
+    .inputs {
+      margin-bottom: 20px;
+    }
+
+    .inputs label {
+      display: block;
+      margin: 5px 0 2px;
+      font-weight: bold;
+    }
+
+    .inputs input, .inputs textarea {
+      width: 100%;
+      padding: 8px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      margin-bottom: 15px;
+      font-family: 'Courier New', monospace;
+    }
+
+    .info {
+      font-size: 0.95rem;
+      margin-bottom: 20px;
+    }
+
+    .code-block, .output-block {
+      padding: 15px;
       border-radius: 8px;
       font-family: 'Courier New', monospace;
       white-space: pre-wrap;
       overflow-x: auto;
+      margin-bottom: 20px;
     }
+
+    .code-block {
+      background-color: #eeeeee;
+      border: 1px solid #ccc;
+    }
+
+    .output-block {
+      background-color: #ffffff;
+      border: 1px solid #ccc;
+    }
+
     .print-btn {
       display: block;
       margin: 30px auto;
@@ -38,8 +71,9 @@
       font-size: 1rem;
       cursor: pointer;
     }
+
     @media print {
-      .print-btn {
+      .print-btn, .inputs button {
         display: none;
       }
     }
@@ -50,30 +84,97 @@
   <header>
     <h1>Instituto Tecnológico de Costa Rica</h1>
     <h2>Curso Taller 1</h2>
-    <h3>Nombre: Juan Pérez</h3>
-    <h4>Carné: 2025012345</h4>
   </header>
+
+  <div class="inputs">
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" placeholder="Escriba su nombre">
+
+    <label for="carne">Carné:</label>
+    <input type="text" id="carne" placeholder="Escriba su número de carné">
+
+    <label for="codigo">Código (Python):</label>
+    <textarea id="codigo" rows="5" placeholder='print("Hola mundo")'></textarea>
+
+    <button onclick="mostrarDatos()">Ejecutar código</button>
+  </div>
 
   <div class="info">
     <strong>Fecha y hora de visualización:</strong> <span id="fechaHora"></span>
   </div>
 
-  <div class="code-block">
-<code>
-print("Esto es una prueba")
-</code>
+  <div id="datosEstudiante" class="info"></div>
+
+  <div>
+    <h3>Código ingresado:</h3>
+    <div class="code-block" id="codigoMostrado">
+      <!-- Código se muestra aquí -->
+    </div>
+
+    <h3>Resultado real (usando Python):</h3>
+    <div class="output-block" id="salida">
+      <!-- Resultado real -->
+    </div>
   </div>
 
   <button class="print-btn" onclick="window.print()">Imprimir como PDF</button>
 
   <script>
-    // Mostrar fecha y hora actual
+    // Fecha y hora actual
     const fecha = new Date();
     const formato = fecha.toLocaleString('es-CR', {
       dateStyle: 'full',
       timeStyle: 'short'
     });
     document.getElementById('fechaHora').textContent = formato;
+
+    // Inicializar Pyodide
+    let pyodideReady = false;
+    let pyodide;
+
+    async function loadPyodideEnv() {
+      pyodide = await loadPyodide();
+      pyodideReady = true;
+    }
+
+    loadPyodideEnv();
+
+    async function mostrarDatos() {
+      if (!pyodideReady) {
+        alert("Python aún se está cargando. Espera un momento.");
+        return;
+      }
+
+      const nombre = document.getElementById('nombre').value;
+      const carne = document.getElementById('carne').value;
+      const codigo = document.getElementById('codigo').value;
+
+      document.getElementById('datosEstudiante').innerHTML = `
+        <strong>Nombre:</strong> ${nombre || '(No ingresado)'}<br>
+        <strong>Carné:</strong> ${carne || '(No ingresado)'}
+      `;
+
+      document.getElementById('codigoMostrado').textContent = codigo;
+
+      try {
+        let output = await pyodide.runPythonAsync(`
+import sys
+import io
+sys.stdout = io.StringIO()
+sys.stderr = io.StringIO()
+
+${codigo}
+
+stdout_output = sys.stdout.getvalue()
+stderr_output = sys.stderr.getvalue()
+stdout_output + stderr_output
+        `);
+
+        document.getElementById('salida').textContent = output || "[Sin salida]";
+      } catch (err) {
+        document.getElementById('salida').textContent = "⚠️ Error al ejecutar el código:\n" + err;
+      }
+    }
   </script>
 
 </body>
